fix: 🎨 objkt info alignment

--- a/src/components/owner-list/index.module.scss
+++ b/src/components/owner-list/index.module.scss
@@ -4,8 +4,6 @@
   display: flex;
   flex-direction: column;
 
-  margin: 0 1em;
-
   .owner {
     display: flex;
     align-items: center;
