--- a/src/pages/objkt-display/tabs/index.module.scss
+++ b/src/pages/objkt-display/tabs/index.module.scss
@@ -46,17 +46,9 @@
 
 .infos_attributes_container,
 .infos_container {
-  margin: 0 16px;
-
   hr {
     border-color: var(--border-color);
     margin-bottom: 1em;
-  }
-}
-
-.infos_container > {
-  div {
-    margin: 1em 0em;
   }
 }
 
@@ -69,10 +61,6 @@
 .container {
   display: flex;
   flex-direction: column;
-  margin: 0 1em;
-}
-
-.history__container {
   margin: 0 1em;
 }
 
